<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:padding="@dimen/cardview_compat_inset_shadow">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_netology_48dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/author"
        android:lines="1"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/moreVert"
        android:layout_marginStart="16dp"
        android:text="@string/author"/>


    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/published"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/moreVert"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/moreVert"
        style="@style/MoreCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:insetLeft="0dp"
        android:checkable="true"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:minWidth="24dp"
        android:minHeight="24dp"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        app:icon="@drawable/baseline_more_vert_24"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="moreVert, avatar, published" />

    <TextView
        android:autoLink="web"
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:freezesText="false"
        android:includeFontPadding="false"
        android:lineSpacingExtra="5dp"
        android:text="@string/content"
        app:layout_constraintBottom_toBottomOf="@id/barrier2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier" />

    <androidx.constraintlayout.widget.Barrier

        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivLikes"
        style="@style/LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/amountLikes"
        app:icon="@drawable/ic_like_24dp"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTint="@color/like_checkbox_tint"
        app:layout_constraintEnd_toStartOf="@id/ivShare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />




    <com.google.android.material.button.MaterialButton
        style="@style/ShareCheckBox"
        android:background="@android:color/transparent"
        android:id="@+id/ivShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amountShares"
        app:layout_constraintStart_toEndOf="@id/ivLikes"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:icon="@drawable/baseline_share_24"
        app:iconPadding="0dp"
        app:iconSize="24dp"
         />


    <TextView
        android:id="@+id/amountWatches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="24dp"
        android:text="500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />

    <com.google.android.material.button.MaterialButton
        style="@style/ShareCheckBox"
        android:background="@android:color/transparent"
        android:id="@+id/ivVisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/amountWatches"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:icon="@drawable/baseline_visibility_24"
        app:iconSize="24dp"
         />
</androidx.constraintlayout.widget.ConstraintLayout>